# GLSystemsSite

./: .replit  app.py  pyproject.toml  replit.md  routes.py  translations.py
attached_assets/: Pasted-Crie-um-site-institucional-marketeiro-moderno-para-uma-empresa-fict-cia-chamada-G-L-Systems-fundada-1756507064014_1756507064014.txt  Pasted-Produtos-e-recursos-do-Pipedrive-Os-produtos-e-recursos-de-gest-o-do-relacionamento-com-o-cliente--1757351925402_1757351925405.txt  Pasted-You-are-given-a-task-to-integrate-an-existing-React-component-in-the-codebase-The-codebase-should-1757516165452_1757516165454.txt
static/css/: contact-forms.css  modern-components.css  style.css
static/js/: demos.js  fluid-animation.js  fluid-simple.js  main.js  splash-cursor.js
templates/: about.html  base.html  cases.html  contact.html  dia_a_dia.html  estudos.html  index.html  solutions.html  vantagens.html
templates/components/: buttons.html  cta_banner.html  section_header.html
templates/demos/: academia.html  agenda.html  crm-profissional.html  crm.html  ecommerce.html  erp.html  estoque.html  financeiro.html  hubspot-marketing.html  ia-analytics.html  imoveis.html  netflix-streaming.html  oficina.html  pipedrive-crm.html  restaurante.html  slack-comunicacao.html  trello-projetos.html  whatsapp-business.html  zoom-videoconferencia.html
